# ClientPulse

./: .gitignore  .prettierignore  .prettierrc  IMPLEMENTATION_PLAN.md  PHASE5_BUILD_SUMMARY.md  PHASE5_SESSION_COMPLETE.md  eslint.config.mjs  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_commit_msg.txt  validate_phase5.py
src/: __init__.py  middleware.ts
src/activities/: __init__.py  crm_activities.py  monitoring_activities.py  opportunity_activities.py  opportunity_llm_activities.py
src/api/: __init__.py  schemas.py
src/api/routers/: __init__.py  accounts.py  opportunities.py  signals.py
src/app/: globals.css  layout.tsx
src/app/(private)/: layout.module.css  layout.tsx
src/app/(public)/: page.module.css  page.tsx
src/audit/: __init__.py  audit_service.py
src/config/: __init__.py  settings.py
src/constants/: workspace.constants.ts
src/context/: authContext.tsx
src/db/: __init__.py  firestore_client.py  read_models.py
src/hooks/: useWorkspaceCreation.ts  useWorkspaceValidation.ts
src/lib/: axios.ts  firebase.ts  opportunitiesAPI.ts  signalsAPI.ts
src/lib/api/: mockAuth.tsx
src/models/: __init__.py  account.py  base.py  opportunity.py  signal.py
src/services/: llm_service.py  rbac_service.py  scoring_service.py  vector_service.py  workspace.service.ts
src/types/: workspace.types.ts
src/utils/: url.utils.ts
src/workers/: reconciliation_job.py  temporal_worker.py
src/workflows/: account_monitoring.py  crm_activation.py  opportunity_discovery.py  review_await.py  signal_ingestion.py
(+72 files in other folders)
